# zerostate

./: .dockerignore  .env.example  .gitignore  .golangci.yml  AINUR_ARCHITECTURAL_DECISIONS.md  AINUR_EVOLUTION_MASTERPLAN.md  AINUR_FAANG_ARCHITECTURE.md  AINUR_VISION.md  AI_COLLABORATION_BRIEF.md  CODEBASE_CLEANUP_SUMMARY.md  CODEOWNERS  COMPLETE_SPRINT_ROADMAP.md  COMPREHENSIVE_FEATURE_BRAINSTORM.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION_OVERHAUL_PLAN.md  Dockerfile  FRONTEND_DEVELOPER_BRIEF.md  FRONTEND_DOCS_PACKAGE.md  GETTING_STARTED.md  GITHUB_SETUP_COMPLETE.md  MASTER_AI_REWRITE_PROMPT.md  Makefile  NEXT_FEATURES.md  NEXT_STEPS.md  OVERALL_PROGRESS.md  PHASE3_SUMMARY.txt  PHASE_2_READY_TO_BUILD.txt  PLANETARY_AI_PROTOCOL_COMPLETE_ARCHITECTURE.md  PRODUCTION_ARCHITECTURE.md  PROGRESS_REPORT.md  QUICKSTART.md  README.md  README.old.md  README_COLLABORATION.md  SPRINT3_SUMMARY.md  SPRINT4_SUMMARY.md  SPRINT_5_COMPLETE.txt  SPRINT_6_COMPLETE.md  SPRINT_7_COMPLETE.md  (+42 more)
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.hive-mind/: config.json  hive.db  hive.db-shm  hive.db-wal
.serena/: project.yml
.swarm/: memory.db-shm  memory.db-wal
agents/json-agent-rust/: Cargo.toml  test.sh  test_runner.go
agents/math-agent-rust/: Cargo.toml  README.md
agents/math-agent-rust/src/: lib.rs
agents/string-agent-rust/: Cargo.toml  test.sh  test_runner.go
agents/validation-agent-rust/: Cargo.toml  test.js  test.sh
ainur-docs/: docusaurus.config.ts  package-lock.json  package.json
ainur-docs/.netlify/: state.json
ainur-docs/docs/: 00_AINUR_PROTOCOL_OVERVIEW.md  01_TEMPORAL_LEDGER.md  AI_COLLABORATION_BRIEF.md  COMPLETE_SPRINT_ROADMAP.md  GETTING_STARTED.md  L5-ARI-v1.md  PLANETARY_AI_PROTOCOL_COMPLETE_ARCHITECTURE.md  README.md  intro.md
chain-v2/: Cargo.toml  ROADMAP_PROGRESS_UPDATED.md  SPRINT7_PHASE3_SUMMARY.md  SPRINT_7_COMPLETE.md
chain-v2/docs/: MONITORING_RUNBOOK.md  MVP_LAUNCH_CHECKLIST.md  MVP_LAUNCH_PLAN.md  PERFORMANCE_BASELINE.md  PRODUCTION_READINESS.md
chain-v2/pallets/escrow/: Cargo.toml
chain-v2/pallets/escrow/src/: lib.rs  mock.rs  phase3_batch_refund.rs  templates.rs  tests_sprint8.rs
chain-v2/pallets/registry/: Cargo.toml
chain-v2/pallets/registry/src/: lib.rs
chain-v2/runtime/: Cargo.toml
cmd/api/: go.mod  go.sum  main.go
cmd/test-blockchain/: go.mod  go.sum  main.go
cmd/wasm-demo/: go.mod  main.go
configs/: alert-rules.yml  grafana-dashboard.json  prometheus.yml
contracts/: .env.example  .solhint.json  BUG_BOUNTY_PROGRAM.md  DEPLOYMENT_GUIDE.md  ECONOMIC_SIMULATION_REPORT.md  INTERNAL_SECURITY_REVIEW.md  PHASE3_COMPLETE.md  PHASE3_COMPLETE_WHATS_NEXT.md  PHASE3_ECONOMIC_SIMULATION_COMPLETE.md  README.md  REVALIDATION_COMPLETE.md  STAKING_REWARDS_COMPLETE.md  TEST_SUMMARY.md  foundry.toml
contracts/cache/: solidity-files-cache.json  test-failures
contracts/script/: Deploy.s.sol  DeployLocal.s.sol  (+1 more)
deployments/: MONITORING_GUIDE.md  README.md  docker-compose.simple.yml  docker-compose.yml  loki-config.yaml  otel-collector-config.yaml  prometheus-alerts.yml  prometheus-simple.yml  prometheus.yml  promtail-config.yaml
docs/: AGENT_COMMUNICATION_API.md  AGENT_DEVELOPMENT_GUIDE.md  AGENT_INFRASTRUCTURE_GAP_ANALYSIS.md  AGENT_MARKETPLACE_MECHANICS.md  AGENT_TYPES_ARCHITECTURE.md  AGENT_UPLOAD_GUIDE.md  AINU_TOKENOMICS.md  ANALYTICS_DEPLOYMENT_GUIDE.md  API.md  ARCHITECTURE.md  BACKEND_INTEGRATION_COMPLETE.md  BETA_LAUNCH_PLAN.md  DEPLOYMENT.md  DEVELOPMENT.md  DISTRIBUTED_TRACING_GUIDE.md  ECONOMIC_IMPLEMENTATION_STATUS.md  GAP_ANALYSIS.md  GITHUB_ISSUES.md  HEALTH_CHECK_GUIDE.md  IMMEDIATE_ACTION_PLAN.md  LOCALSTACK_S3_SETUP.md  OBSERVABILITY_GUIDE.md  OBSERVABILITY_TEST_GUIDE.md  OPERATIONS.md  P0_CRITICAL_FIXES_COMPLETE.md  PAYMENT_SECURITY_AUDIT.md  PRODUCTION_API_STATUS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_ROADMAP.md  PRODUCTION_SETUP_GUIDE.md  PROJECT_STATUS.md  R2_SETUP_GUIDE.md  README.md  SPRINT_10_COMPLETE.md  SPRINT_10_PLAN.md  SPRINT_10_TASK1_COMPLETE.md  SPRINT_10_TASK2_COMPLETE.md  SPRINT_11_COMPLETE.md  SPRINT_12_COMPLETE.md  SPRINT_13_COMPLETE.md  (+50 more)
examples/: agent_card.example.json  task_manifest.example.json
libs/aacl/: Cargo.toml
libs/aacl/src/: error.rs  lib.rs  types.rs
libs/agentcard/: Cargo.toml
libs/agentcard/src/: error.rs  lib.rs  signing.rs  types.rs
reference-runtime-v1/: Makefile  README.md  go.mod  go.sum
scripts/: create-r2-bucket.sh  deploy-frontend.sh  deploy-manual.sh  deploy-mvp.sh  deploy-staging.sh  get-bootnode-peer.sh  register-agent.sh  run-escrow-tests.sh  run-mvp-tests.sh  run-sprint7-tests.sh  setup-local-network.sh  setup-r2.sh  start-with-dynamic-bootstrap.sh  test-agent.sh  test-auction.sh  test-e2e-deployment.sh  test-r2-upload.go  test-wasm-execution.go  test-wasm-local.go  upload-agents-to-r2.sh  upload-wasm-agents.go  verify-deployment-readiness.sh  watch-build-progress.sh
specs/: AACL-Accept-Proposal-v1.md  AACL-Bid-Signature-Verification-v1.md  AACL-Bid-v1.md  AACL-CFP-v1.md  AACL-Reject-Proposal-v1.md  AACL-v1.md  AgentCard-VC-v1.md  L3-Aether-Topics-v1.md  L5-ARI-v1.md  agent_card.schema.json  task_manifest.schema.json
tests/: blockchain_integration_test.go  e2e-economic-test.sh  e2e-escrow-test.sh  e2e-test.sh
tools/: generate-wasm-wrapper.sh  test-gemini.go  test-intelligent-orchestrator.go  test-r2.go  test-wasmtime-r2.go  validate-wasm.sh
web/: README.md  WEBSOCKET_INTEGRATION.md
whitepapers/: 00_AINUR_PROTOCOL_OVERVIEW.md  01_TEMPORAL_LEDGER.md
(+436 files in other folders)
