[package]
name = "aacl"
version = "0.1.0"
edition = "2021"
authors = ["Ainur Protocol Team"]
description = "AACL-v1 implementation for Ainur agent communication"
license = "Apache-2.0"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# AgentCard integration
agentcard = { path = "../agentcard" }

# Cryptography (for message signing)
ed25519-dalek = "2.1"

# Validation
jsonschema = { version = "0.18", optional = true }

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }

[features]
default = []
validation = ["jsonschema"]
