[package]
name = "agentcard"
version = "0.1.0"
edition = "2021"
authors = ["Ainur Protocol Team"]
description = "AgentCard-VC-v1 implementation for Ainur agent identity"
license = "Apache-2.0"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ed25519-dalek = "2.1"
sha2 = "0.10"
bs58 = "0.5"
hex = "0.4"
rand = "0.8"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Validation
jsonschema = { version = "0.18", optional = true }

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }

[features]
default = []
validation = ["jsonschema"]
